- include/dos.h: Code cleanup: remove unused structure definitions. (RFB)

2013-09-04
- bios/acsi.c bios/acsi.h bios/blkdev.c: Fix ACSI to work on real disks,
  both ACSI & SCSI via converter.  Enhanced version of patch provided by
  Hampa Hug. (RFB)

2013-09-05
- bios/acsi.c: Code cleanup: remove meaningless #if/#endif. (RFB)

2013-09-21
- bios/linea.S vdi/vdi_defs.h vdi/vdi_fill.c vdi/vdi_mouse.c: Added Line-A pixel
  set/get & sprite draw/undraw support. Contributed by Eero Tamminen. (VRI)
- vdi/vdi_mouse.c: Avoid side effects between mouse and sprite save area.
  Contributed by Eero Tamminen. (VRI)
- bios/dma.c bios/dma.h bios/mfp.c bios/mfp.h: Minor code tidy up. (RFB)
- bios/acsi.c bios/floppy.c bios/mfp.c bios/mfp.h: Eliminate divide in
  timeout_gpip() by passing timeout in ticks. (RFB)
- bios/xhdi.c: Code cleanup: use KDEBUG() for debugging statements. (RFB)
- bios/acsi.c bios/acsi.h bios/xhdi.c: XHInqTarget()/XHInqTarget2() now
  report error if selected ACSI drive is not present. (RFB)

2013-09-23
- bios/acsi.c: Support drives >1GB on ACSI interface. (RFB)
- bios/acsi.c: Retrieve status properly for all ACSI commands. (RFB)
- bios/acsi.c bios/acsi.h bios/xhdi.c doc/xhdi.txt: XHGetCapacity() is
  now supported for ACSI devices. (RFB)

2013-09-24
- bios/linea.S vdi/vdi_blit.S vdi/vdi_raster.c: Added Line-A bitblit & textblit
  support. Contributed by Eero Tamminen. (VRI)
- bios/linea.S vdi/vdi_bezier.c vdi/vdi_defs.h vdi/vdi_fill.c vdi/vdi_line.c
  vdi/vdi_text.c: Added support for Line-A hline/line/fillrect. Contributed
  by Eero Tamminen. (VRI)
- vdi/vdi_line.c: Improved linea_color() performance. Contributed by David
  Savinkoff. (VRI)

2013-09-25
- vdi/vdi_raster.c: Fixed "make firebee". Contributed by Eero Tamminen. (VRI)
- vdi/vdi_line.c: Improved linea_color() performance again. Contributed by David
  Savinkoff. (VRI)
- bios/disk.c: Improved determination of disk capacity & blocksize. (RFB)